# BA

./: README.md
3D2D_EIGEN_BA/: CMakeLists.txt  eigen_ba.cpp
3D2D_G2O_BA/: BA-3Dto2D.cpp  CMakeLists.txt
BAL_EIGEN_BA/: CMakeLists.txt  eigen_ba.cpp
BAL_EIGEN_BA/common/: BALProblem.cpp  BALProblem.h
BAL_G2O_BA/: CMakeLists.txt  g2o_bal_class.h  g2o_bundle.cpp
BAL_G2O_BA/common/: BALProblem.cpp
